Auto-hide scrollbar when it's not needed. Fixes #76

--- a/less/index.less
+++ b/less/index.less
@@ -108,7 +108,7 @@ body {
     width: 100%
   }
   .scrolling-content-x {
-    overflow-x: scroll;
+    overflow-x: auto;
     display: block;
   }
 
@@ -151,4 +151,3 @@ body {
 
 
 }
-
